--- a/lib/build.gradle
+++ b/lib/build.gradle
@@ -6,6 +6,9 @@ configurations {
     provided
 }
 
+sourceCompatibility = '1.6' // -source
+targetCompatibility = '1.6' // -target
+
 sourceSets {
     main.compileClasspath += configurations.provided
     test.compileClasspath += configurations.provided
